[package]
name = "csbase"
version = "0.1.0"
authors = ["alvaro"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
bincode = "1.2.1"
lalrpop = "0.17.2"
lalrpop-util = "0.17.2"
regex = "0.2.1"
config = "0.4.1"
serde = "1.0.104"
shellexpand = "1.1.1"